add working pkg wrapper to c++ lib

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,18 @@
-Package: lzstring
+Package: lzstringr
 Type: Package
-Title: What the Package Does (Title Case)
+Title: An R wrapper of lzstring C++ library
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Sam Parmar
+Maintainer: Sam Parmar <yourself@somewhere.net>
+Description: An R wrapper of LZ-based compression algorithm 
+  implemented in C++
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+LinkingTo: 
+    cpp11
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+RoxygenNote: 7.2.3
+SystemRequirements: C++11
