--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,4 @@ export(compressToBase64)
 export(compressToEncodedURIComponent)
 export(decompressFromBase64)
 export(decompressFromEncodedURIComponent)
-useDynLib(lzstringr, .registration = TRUE)
+useDynLib(lzstring, .registration = TRUE)
