add benchmarks vignette

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,10 @@ LazyData: true
 LinkingTo: 
     cpp11
 Suggests: 
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 RoxygenNote: 7.2.3
 URL: https://parmsam.github.io/lzstring-r/
+VignetteBuilder: knitr
