ensure vignette pkgs are in suggests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,10 @@ LazyData: true
 LinkingTo: 
     cpp11
 Suggests: 
+    bench,
+    ggplot2,
     knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 RoxygenNote: 7.2.3
