--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,8 @@ LazyData: true
 LinkingTo: 
     cpp11
 Suggests: 
-    testthat (>= 3.0.0)
-    ggplot2
+    testthat (>= 3.0.0),
+    ggplot2,
     bench
 Config/testthat/edition: 3
 RoxygenNote: 7.3.1
