fix: add jsonlite to Suggests in DESCRIPTION file

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,8 @@ LinkingTo:
 Suggests: 
     testthat (>= 3.0.0),
     ggplot2,
-    bench
+    bench,
+    jsonlite
 Config/testthat/edition: 3
 RoxygenNote: 7.3.1
 URL: https://parmsam.github.io/lzstring-r/, https://github.com/parmsam/lzstring-r
